style: update the floating-back-btn class to avoid overlapping flash messages

--- a/static/style.css
+++ b/static/style.css
@@ -26,7 +26,7 @@ form {
 
 .floating-back-btn {
         position: fixed;
-        bottom: 30px;
+        bottom: 89px;
         right: 30px;
         z-index: 1000;
         border-radius: 50px;
@@ -391,7 +391,7 @@ footer p {
 /* Alert fluid animation*/
 .alert {
     margin-bottom: 10px;
-    border-left: 5px solid; /* Opzionale: aggiunge un tocco di colore al bordo */
+    border-left: 5px solid; /* Left border color */
 }
 
 .alert-success { border-left-color: #198754; }
